starts third question

--- a/homeworks/cs109a_hw1/S109a_hw1.ipynb
+++ b/homeworks/cs109a_hw1/S109a_hw1.ipynb
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 409,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 415,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -702,7 +702,9 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "page = \"https://www.imdb.com/list/ls025814950/\"\n",
+    "my_page = requests.get(page)"
    ]
   },
   {
@@ -715,9 +717,19 @@
     }
    },
    "source": [
-    "<HR> Your answers here\n",
+    "<HR> Your answers here <HR>\n",
     "\n",
-    "<HR>"
+    "1. ```my_page.text```\n",
+    "\n",
+    "*Answer:* It's the text of the entire page encoded by request package. \n",
+    "\n",
+    "2. ```my_page.status_code```\n",
+    "\n",
+    "*Answer:* It carries the response status code. It will show what happened while the connection was made. Several number codes can be raised, like 200 (good one) or 404 (bad one). \n",
+    "\n",
+    "3. ```my_page.content```\n",
+    "\n",
+    "*Answer:* It's the response of the page as bytes. "
    ]
   },
   {
@@ -729,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 465,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -739,23 +751,31 @@
    },
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "star_soup = BeautifulSoup(my_page.content, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 466,
    "metadata": {
     "button": false,
     "new_sheet": false,
     "run_control": {
      "read_only": false
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<!DOCTYPE html>\n<html xmlns:fb=\"http://www.facebook.com/2008/fbml\" xmlns:og=\"http://ogp.me/ns#\">\n <head>\n  <meta charset=\"utf-8\"/>\n  <meta content=\"IE=edge\" http-equiv=\"X-UA-Compatible\"/>\n  <meta content=\"app-id=342792525, app-argument=imdb:///list/ls025814950?src=mdot\" name=\"apple-itunes-app\"/>\n  <script type=\"text/javascript\">\n   var IMDbTimer={starttime: new Date().getTime(),pt:'java'};\n  </scr\n"
+    }
+   ],
    "source": [
     "# check your code - you should see an HTML page\n",
-    "print (star_soup.prettify()[:])"
+    "print (star_soup.prettify()[:400])"
    ]
   },
   {
@@ -807,8 +827,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 478,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# your code here\n"
