--- a/homeworks/cs109a_hw1/S109a_hw1.ipynb
+++ b/homeworks/cs109a_hw1/S109a_hw1.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 12,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 13,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": 14,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 15,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 4,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -680,7 +680,8 @@
    },
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "import time"
    ]
   },
   {
@@ -692,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 415,
+   "execution_count": 5,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -741,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 6,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -757,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 7,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -827,30 +828,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "INFO - Gal Gadot - DONE\nINFO - Tom Hardy - DONE\nINFO - Emilia Clarke - DONE\nINFO - Alexandra Daddario - DONE\nINFO - Bill Skarsgård - DONE\nINFO - Pom Klementieff - DONE\nINFO - Ana de Armas - DONE\nINFO - Dan Stevens - DONE\nINFO - Sofia Boutella - DONE\nINFO - Katherine Langford - DONE\nINFO - Karen Gillan - DONE\nINFO - Margot Robbie - DONE\nINFO - Felicity Jones - DONE\nINFO - Emma Stone - DONE\nINFO - Dylan Minnette - DONE\nINFO - Jennifer Lawrence - DONE\nINFO - Alicia Vikander - DONE\nINFO - Britt Robertson - DONE\nINFO - Ruby Rose - DONE\nINFO - Brie Larson - DONE\nINFO - Keanu Reeves - DONE\nINFO - Sophia Lillis - DONE\nINFO - Jessica Henwick - DONE\nINFO - Cara Delevingne - DONE\nINFO - Haley Bennett - DONE\nINFO - Luke Evans - DONE\nINFO - Teresa Palmer - DONE\nINFO - Tom Holland - DONE\nINFO - Alison Brie - DONE\nINFO - Robin Wright - DONE\nINFO - Zendaya - DONE\nINFO - Emma Watson - DONE\nINFO - Scarlett Johansson - DONE\nINFO - Dafne Keen - DONE\nINFO - Kelly Rohrbach - DONE\nINFO - Eiza González - DONE\nINFO - Laura Haddock - DONE\nINFO - Mary Elizabeth Winstead - DONE\nINFO - Taron Egerton - DONE\nINFO - Anya Taylor-Joy - DONE\nINFO - Elizabeth Debicki - DONE\nINFO - Katheryn Winnick - DONE\nINFO - Sean Young - DONE\nINFO - Bill Paxton - DONE\nINFO - Charlie Hunnam - DONE\nINFO - Yvonne Strahovski - DONE\nINFO - Jason Momoa - DONE\nINFO - Lily James - DONE\nINFO - Jodie Whittaker - DONE\nINFO - Ryan Gosling - DONE\nINFO - Adrianne Palicki - DONE\nINFO - Millie Bobby Brown - DONE\nINFO - Allison Williams - DONE\nINFO - Chris Pratt - DONE\nINFO - Katherine Waterston - DONE\nINFO - Tom Cruise - DONE\nINFO - Johnny Depp - DONE\nINFO - James McAvoy - DONE\nINFO - Travis Fimmel - DONE\nINFO - Charlize Theron - DONE\nINFO - Cole Sprouse - DONE\nINFO - Kaya Scodelario - DONE\nINFO - Abigail Breslin - DONE\nINFO - Daisy Ridley - DONE\nINFO - Emily Browning - DONE\nINFO - Christopher Nolan - DONE\nINFO - Zoe Saldana - DONE\nINFO - Lena Headey - DONE\nINFO - Hugh Jackman - DONE\nINFO - Kit Harington - DONE\nINFO - Leonardo DiCaprio - DONE\nINFO - Malina Weissman - DONE\nINFO - Finn Jones - DONE\nINFO - Chloë Grace Moretz - DONE\nINFO - Alexander Skarsgård - DONE\nINFO - Amy Adams - DONE\nINFO - Bella Thorne - DONE\nINFO - Rebecca Ferguson - DONE\nINFO - Julia Garner - DONE\nINFO - Joan Crawford - DONE\nINFO - Kate Mara - DONE\nINFO - Chris Pine - DONE\nINFO - Bryce Dallas Howard - DONE\nINFO - Halston Sage - DONE\nINFO - Kate Beckinsale - DONE\nINFO - Connie Nielsen - DONE\nINFO - Auli'i Cravalho - DONE\nINFO - Mädchen Amick - DONE\nINFO - Serinda Swan - DONE\nINFO - Dave Bautista - DONE\nINFO - Rose Leslie - DONE\nINFO - Annabelle Wallis - DONE\nINFO - Zoey Deutch - DONE\nINFO - Sophie Turner - DONE\nINFO - Dakota Johnson - DONE\nINFO - Rosamund Pike - DONE\nINFO - Elodie Yung - DONE\nINFO - Shailene Woodley - DONE\nINFO - Nina Dobrev - DONE\nINFO - Christian Navarro - DONE\n"
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "def parse_stars(soup) -> list:\n",
+    "    stars_list = []\n",
+    "    act_list = star_soup.findAll('div', {'class': 'lister-item mode-detail'})\n",
+    "    gender_bool = lambda find: int(find == -1) \n",
+    "    for act in act_list:\n",
+    "        dict_stars = {}\n",
+    "        name = act.find('div', {'class': 'lister-item-content'}).a.text.strip()\n",
+    "        print(\"INFO - {} - DONE\".format(name))\n",
+    "        url = act.find('div', {'class': 'lister-item-content'}).a['href']\n",
+    "        url = \"https://www.imdb.com\" + url\n",
+    "        gender = gender_bool(act.find('div', {'class': 'lister-item-content'}).p.text.find(\"Actor\"))\n",
+    "        try: \n",
+    "            page = requests.get(url)\n",
+    "            page_soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "        except requests.exceptions.ConnectionError:\n",
+    "            page_soup = ''\n",
+    "        time.sleep(5)\n",
+    "        dict_stars['name'] = name\n",
+    "        dict_stars['gender'] = gender\n",
+    "        dict_stars['url'] = url\n",
+    "        dict_stars['page'] = page_soup\n",
+    "        stars_list.append(dict_stars)\n",
+    "    return stars_list\n",
+    "starlist = parse_stars(star_soup)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Testing if some has a problem\n",
+    "for star in starlist:\n",
+    "    if star['page'] == '':\n",
+    "        print(star['name'])\n",
+    "        url = star['url']\n",
+    "        page = requests.get(url)\n",
+    "        page_soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "        star['page'] = page_soup\n",
+    "        time.sleep(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "button": false,
     "new_sheet": false,
     "run_control": {
      "read_only": false
-    }
+    },
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Gal Gadot\n1\nhttps://www.imdb.com/name/nm2933757\n"
+    }
+   ],
    "source": [
     "# this list is large because of the html code into the `page` field\n",
     "# to get a better picture, print only the first element\n",
-    "starlist[0]"
+    "print(starlist[0]['name'])\n",
+    "print(starlist[0]['gender'])\n",
+    "print(starlist[0]['url'])"
    ]
   },
   {
@@ -944,25 +1001,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "# your code here\n",
-    "\n",
     "def create_star_table(starlist: list) -> list:\n",
-    "    "
+    "    star_table = []\n",
+    "    for star in starlist:\n",
+    "        star_dict = {}\n",
+    "        try: \n",
+    "            year = star['page'].find('div', {'id': \"name-born-info\"}).time['datetime'][0:4]\n",
+    "        except AttributeError:\n",
+    "            year = np.nan\n",
+    "        filmography = star['page'].find('div',{'id': \"filmography\"})\n",
+    "\n",
+    "        first_movie = filmography.find_all('div')[1].find_all('div', {'class': \"filmo-row\"})[-1]\n",
+    "        movie = first_movie.b.a.text.strip()\n",
+    "        year_movie = first_movie.span.text.strip()  \n",
+    "        credit = re.findall(r'([0-9]*) credit', filmography.div.text)[0]\n",
+    "\n",
+    "        star_dict['star_name'] = star['name']\n",
+    "        star_dict['gender'] = star['gender']\n",
+    "        star_dict['year_born'] = year\n",
+    "        star_dict['first_movie'] = movie\n",
+    "        star_dict['year_first_movie'] = year_movie\n",
+    "        star_dict['credits'] = int(credit)\n",
+    "        \n",
+    "        star_table.append(star_dict)\n",
+    "    return star_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {
     "button": false,
     "new_sheet": false,
     "run_control": {
      "read_only": false
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -973,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -984,7 +1063,7 @@
    "outputs": [],
    "source": [
     "# check your code\n",
-    "star_table"
+    "# star_table"
    ]
   },
   {
