--- a/homeworks/cs109a_hw6/HW6.ipynb
+++ b/homeworks/cs109a_hw6/HW6.ipynb
@@ -10,74 +10,22 @@
     "\n",
     "\n",
     "<hr style=\"height:2pt\">\n",
-    "\n"
+    "\n",
+    "## Lucas Machado Moschen\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "h1 { \n",
-       "    padding-top: 25px;\n",
-       "    padding-bottom: 25px;\n",
-       "    text-align: left; \n",
-       "    padding-left: 10px;\n",
-       "    background-color: #DDDDDD; \n",
-       "    color: black;\n",
-       "}\n",
-       "div.exercise {\n",
-       "\tbackground-color: #ffcccc;\n",
-       "\tborder-color: #E9967A; \t\n",
-       "\tborder-left: 5px solid #800080; \n",
-       "\tpadding: 0.5em;\n",
-       "}\n",
-       "div.theme {\n",
-       "\tbackground-color: #DDDDDD;\n",
-       "\tborder-color: #E9967A; \t\n",
-       "\tborder-left: 5px solid #800080; \n",
-       "\tpadding: 0.5em;\n",
-       "\tfont-size: 18pt;\n",
-       "}\n",
-       "p.q1 { \n",
-       "    padding-top: 5px;\n",
-       "    padding-bottom: 5px;\n",
-       "    text-align: left; \n",
-       "    padding-left: 5px;\n",
-       "    background-color: #EEEEEE; \n",
-       "    color: black;\n",
-       "}\n",
-       "header {\n",
-       "   padding-top: 35px;\n",
-       "    padding-bottom: 35px;\n",
-       "    text-align: left; \n",
-       "    padding-left: 10px;\n",
-       "    background-color: #DDDDDD; \n",
-       "    color: black;\n",
-       "}\n",
-       "</style>\n",
-       "\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## RUN THIS CELL TO GET THE RIGHT FORMATTING \n",
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
     "    styles = open(\"style/cs109.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
-    "css_styling()"
+    "#css_styling()"
    ]
   },
   {
@@ -102,14 +50,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
+     "name": "stderr",
+     "text": "Using TensorFlow backend.\n"
     }
    ],
    "source": [
@@ -165,234 +113,13 @@
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>lepton pT</th>\n",
-       "      <th>lepton eta</th>\n",
-       "      <th>lepton phi</th>\n",
-       "      <th>missing energy magnitude</th>\n",
-       "      <th>missing energy phi</th>\n",
-       "      <th>jet 1 pt</th>\n",
-       "      <th>jet 1 eta</th>\n",
-       "      <th>jet 1 phi</th>\n",
-       "      <th>jet 1 b-tag</th>\n",
-       "      <th>jet 2 pt</th>\n",
-       "      <th>jet 2 eta</th>\n",
-       "      <th>jet 2 phi</th>\n",
-       "      <th>jet 2 b-tag</th>\n",
-       "      <th>jet 3 pt</th>\n",
-       "      <th>jet 3 eta</th>\n",
-       "      <th>jet 3 phi</th>\n",
-       "      <th>jet 3 b-tag</th>\n",
-       "      <th>jet 4 pt</th>\n",
-       "      <th>jet 4 eta</th>\n",
-       "      <th>jet 4 phi</th>\n",
-       "      <th>jet 4 b-tag</th>\n",
-       "      <th>m_jj</th>\n",
-       "      <th>m_jjj</th>\n",
-       "      <th>m_lv</th>\n",
-       "      <th>m_jlv</th>\n",
-       "      <th>m_bb</th>\n",
-       "      <th>m_wbb</th>\n",
-       "      <th>m_wwbb</th>\n",
-       "      <th>class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.377</td>\n",
-       "      <td>-1.5800</td>\n",
-       "      <td>-1.7100</td>\n",
-       "      <td>0.991</td>\n",
-       "      <td>0.114</td>\n",
-       "      <td>1.250</td>\n",
-       "      <td>0.620</td>\n",
-       "      <td>-1.480</td>\n",
-       "      <td>2.17</td>\n",
-       "      <td>0.754</td>\n",
-       "      <td>0.7750</td>\n",
-       "      <td>-0.667</td>\n",
-       "      <td>2.21</td>\n",
-       "      <td>1.280</td>\n",
-       "      <td>-1.190</td>\n",
-       "      <td>0.505</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.110</td>\n",
-       "      <td>-0.464</td>\n",
-       "      <td>0.397</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.522</td>\n",
-       "      <td>1.320</td>\n",
-       "      <td>0.982</td>\n",
-       "      <td>1.360</td>\n",
-       "      <td>0.965</td>\n",
-       "      <td>1.310</td>\n",
-       "      <td>1.080</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.707</td>\n",
-       "      <td>0.0876</td>\n",
-       "      <td>-0.4000</td>\n",
-       "      <td>0.919</td>\n",
-       "      <td>-1.230</td>\n",
-       "      <td>1.170</td>\n",
-       "      <td>-0.553</td>\n",
-       "      <td>0.886</td>\n",
-       "      <td>2.17</td>\n",
-       "      <td>1.300</td>\n",
-       "      <td>0.7620</td>\n",
-       "      <td>-1.060</td>\n",
-       "      <td>2.21</td>\n",
-       "      <td>0.607</td>\n",
-       "      <td>0.459</td>\n",
-       "      <td>1.020</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.497</td>\n",
-       "      <td>0.956</td>\n",
-       "      <td>0.236</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.440</td>\n",
-       "      <td>0.829</td>\n",
-       "      <td>0.992</td>\n",
-       "      <td>1.160</td>\n",
-       "      <td>2.220</td>\n",
-       "      <td>1.190</td>\n",
-       "      <td>0.938</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.617</td>\n",
-       "      <td>0.2660</td>\n",
-       "      <td>-1.3500</td>\n",
-       "      <td>1.150</td>\n",
-       "      <td>1.040</td>\n",
-       "      <td>0.955</td>\n",
-       "      <td>0.377</td>\n",
-       "      <td>-0.148</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.060</td>\n",
-       "      <td>-0.0194</td>\n",
-       "      <td>1.110</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.470</td>\n",
-       "      <td>0.205</td>\n",
-       "      <td>-1.060</td>\n",
-       "      <td>2.55</td>\n",
-       "      <td>1.490</td>\n",
-       "      <td>-0.398</td>\n",
-       "      <td>-0.542</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.020</td>\n",
-       "      <td>1.030</td>\n",
-       "      <td>0.986</td>\n",
-       "      <td>0.928</td>\n",
-       "      <td>1.370</td>\n",
-       "      <td>0.982</td>\n",
-       "      <td>0.917</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.851</td>\n",
-       "      <td>-0.3810</td>\n",
-       "      <td>-0.0713</td>\n",
-       "      <td>1.470</td>\n",
-       "      <td>-0.795</td>\n",
-       "      <td>0.692</td>\n",
-       "      <td>0.883</td>\n",
-       "      <td>0.497</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.620</td>\n",
-       "      <td>0.1240</td>\n",
-       "      <td>1.180</td>\n",
-       "      <td>1.11</td>\n",
-       "      <td>1.290</td>\n",
-       "      <td>0.160</td>\n",
-       "      <td>-0.916</td>\n",
-       "      <td>2.55</td>\n",
-       "      <td>0.945</td>\n",
-       "      <td>0.796</td>\n",
-       "      <td>-1.520</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.200</td>\n",
-       "      <td>1.100</td>\n",
-       "      <td>0.987</td>\n",
-       "      <td>1.350</td>\n",
-       "      <td>1.460</td>\n",
-       "      <td>0.995</td>\n",
-       "      <td>0.954</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.768</td>\n",
-       "      <td>-0.6920</td>\n",
-       "      <td>-0.0402</td>\n",
-       "      <td>0.615</td>\n",
-       "      <td>0.144</td>\n",
-       "      <td>0.749</td>\n",
-       "      <td>0.397</td>\n",
-       "      <td>-0.874</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.150</td>\n",
-       "      <td>0.1270</td>\n",
-       "      <td>1.320</td>\n",
-       "      <td>2.21</td>\n",
-       "      <td>0.730</td>\n",
-       "      <td>-0.758</td>\n",
-       "      <td>-1.120</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.848</td>\n",
-       "      <td>0.107</td>\n",
-       "      <td>0.502</td>\n",
-       "      <td>1.55</td>\n",
-       "      <td>0.922</td>\n",
-       "      <td>0.864</td>\n",
-       "      <td>0.983</td>\n",
-       "      <td>1.370</td>\n",
-       "      <td>0.601</td>\n",
-       "      <td>0.919</td>\n",
-       "      <td>0.957</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   lepton pT  lepton eta  lepton phi  missing energy magnitude  missing energy phi  jet 1 pt  jet 1 eta  jet 1 phi  jet 1 b-tag  jet 2 pt  jet 2 eta  jet 2 phi  jet 2 b-tag  jet 3 pt  jet 3 eta  jet 3 phi  jet 3 b-tag  jet 4 pt  jet 4 eta  jet 4 phi  jet 4 b-tag   m_jj  m_jjj   m_lv  m_jlv   m_bb  m_wbb  m_wwbb  class\n",
-       "0      0.377     -1.5800     -1.7100                     0.991               0.114     1.250      0.620     -1.480         2.17     0.754     0.7750     -0.667         2.21     1.280     -1.190      0.505         0.00     1.110     -0.464      0.397         0.00  0.522  1.320  0.982  1.360  0.965  1.310   1.080    1.0\n",
-       "1      0.707      0.0876     -0.4000                     0.919              -1.230     1.170     -0.553      0.886         2.17     1.300     0.7620     -1.060         2.21     0.607      0.459      1.020         0.00     0.497      0.956      0.236         0.00  0.440  0.829  0.992  1.160  2.220  1.190   0.938    1.0\n",
-       "2      0.617      0.2660     -1.3500                     1.150               1.040     0.955      0.377     -0.148         0.00     1.060    -0.0194      1.110         0.00     1.470      0.205     -1.060         2.55     1.490     -0.398     -0.542         0.00  1.020  1.030  0.986  0.928  1.370  0.982   0.917    1.0\n",
-       "3      0.851     -0.3810     -0.0713                     1.470              -0.795     0.692      0.883      0.497         0.00     1.620     0.1240      1.180         1.11     1.290      0.160     -0.916         2.55     0.945      0.796     -1.520         0.00  1.200  1.100  0.987  1.350  1.460  0.995   0.954    1.0\n",
-       "4      0.768     -0.6920     -0.0402                     0.615               0.144     0.749      0.397     -0.874         0.00     1.150     0.1270      1.320         2.21     0.730     -0.758     -1.120         0.00     0.848      0.107      0.502         1.55  0.922  0.864  0.983  1.370  0.601  0.919   0.957    0.0"
-      ]
+      "text/plain": "   lepton pT  lepton eta  lepton phi  missing energy magnitude  missing energy phi  jet 1 pt  jet 1 eta  jet 1 phi  jet 1 b-tag  jet 2 pt  jet 2 eta  jet 2 phi  jet 2 b-tag  jet 3 pt  jet 3 eta  jet 3 phi  jet 3 b-tag  jet 4 pt  jet 4 eta  jet 4 phi  jet 4 b-tag   m_jj  m_jjj   m_lv  m_jlv   m_bb  m_wbb  m_wwbb  class\n0      0.377     -1.5800     -1.7100                     0.991               0.114     1.250      0.620     -1.480         2.17     0.754     0.7750     -0.667         2.21     1.280     -1.190      0.505         0.00     1.110     -0.464      0.397         0.00  0.522  1.320  0.982  1.360  0.965  1.310   1.080    1.0\n1      0.707      0.0876     -0.4000                     0.919              -1.230     1.170     -0.553      0.886         2.17     1.300     0.7620     -1.060         2.21     0.607      0.459      1.020         0.00     0.497      0.956      0.236         0.00  0.440  0.829  0.992  1.160  2.220  1.190   0.938    1.0\n2      0.617      0.2660     -1.3500                     1.150               1.040     0.955      0.377     -0.148         0.00     1.060    -0.0194      1.110         0.00     1.470      0.205     -1.060         2.55     1.490     -0.398     -0.542         0.00  1.020  1.030  0.986  0.928  1.370  0.982   0.917    1.0\n3      0.851     -0.3810     -0.0713                     1.470              -0.795     0.692      0.883      0.497         0.00     1.620     0.1240      1.180         1.11     1.290      0.160     -0.916         2.55     0.945      0.796     -1.520         0.00  1.200  1.100  0.987  1.350  1.460  0.995   0.954    1.0\n4      0.768     -0.6920     -0.0402                     0.615               0.144     0.749      0.397     -0.874         0.00     1.150     0.1270      1.320         2.21     0.730     -0.758     -1.120         0.00     0.848      0.107      0.502         1.55  0.922  0.864  0.983  1.370  0.601  0.919   0.957    0.0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>lepton pT</th>\n      <th>lepton eta</th>\n      <th>lepton phi</th>\n      <th>missing energy magnitude</th>\n      <th>missing energy phi</th>\n      <th>jet 1 pt</th>\n      <th>jet 1 eta</th>\n      <th>jet 1 phi</th>\n      <th>jet 1 b-tag</th>\n      <th>jet 2 pt</th>\n      <th>jet 2 eta</th>\n      <th>jet 2 phi</th>\n      <th>jet 2 b-tag</th>\n      <th>jet 3 pt</th>\n      <th>jet 3 eta</th>\n      <th>jet 3 phi</th>\n      <th>jet 3 b-tag</th>\n      <th>jet 4 pt</th>\n      <th>jet 4 eta</th>\n      <th>jet 4 phi</th>\n      <th>jet 4 b-tag</th>\n      <th>m_jj</th>\n      <th>m_jjj</th>\n      <th>m_lv</th>\n      <th>m_jlv</th>\n      <th>m_bb</th>\n      <th>m_wbb</th>\n      <th>m_wwbb</th>\n      <th>class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.377</td>\n      <td>-1.5800</td>\n      <td>-1.7100</td>\n      <td>0.991</td>\n      <td>0.114</td>\n      <td>1.250</td>\n      <td>0.620</td>\n      <td>-1.480</td>\n      <td>2.17</td>\n      <td>0.754</td>\n      <td>0.7750</td>\n      <td>-0.667</td>\n      <td>2.21</td>\n      <td>1.280</td>\n      <td>-1.190</td>\n      <td>0.505</td>\n      <td>0.00</td>\n      <td>1.110</td>\n      <td>-0.464</td>\n      <td>0.397</td>\n      <td>0.00</td>\n      <td>0.522</td>\n      <td>1.320</td>\n      <td>0.982</td>\n      <td>1.360</td>\n      <td>0.965</td>\n      <td>1.310</td>\n      <td>1.080</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.707</td>\n      <td>0.0876</td>\n      <td>-0.4000</td>\n      <td>0.919</td>\n      <td>-1.230</td>\n      <td>1.170</td>\n      <td>-0.553</td>\n      <td>0.886</td>\n      <td>2.17</td>\n      <td>1.300</td>\n      <td>0.7620</td>\n      <td>-1.060</td>\n      <td>2.21</td>\n      <td>0.607</td>\n      <td>0.459</td>\n      <td>1.020</td>\n      <td>0.00</td>\n      <td>0.497</td>\n      <td>0.956</td>\n      <td>0.236</td>\n      <td>0.00</td>\n      <td>0.440</td>\n      <td>0.829</td>\n      <td>0.992</td>\n      <td>1.160</td>\n      <td>2.220</td>\n      <td>1.190</td>\n      <td>0.938</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.617</td>\n      <td>0.2660</td>\n      <td>-1.3500</td>\n      <td>1.150</td>\n      <td>1.040</td>\n      <td>0.955</td>\n      <td>0.377</td>\n      <td>-0.148</td>\n      <td>0.00</td>\n      <td>1.060</td>\n      <td>-0.0194</td>\n      <td>1.110</td>\n      <td>0.00</td>\n      <td>1.470</td>\n      <td>0.205</td>\n      <td>-1.060</td>\n      <td>2.55</td>\n      <td>1.490</td>\n      <td>-0.398</td>\n      <td>-0.542</td>\n      <td>0.00</td>\n      <td>1.020</td>\n      <td>1.030</td>\n      <td>0.986</td>\n      <td>0.928</td>\n      <td>1.370</td>\n      <td>0.982</td>\n      <td>0.917</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.851</td>\n      <td>-0.3810</td>\n      <td>-0.0713</td>\n      <td>1.470</td>\n      <td>-0.795</td>\n      <td>0.692</td>\n      <td>0.883</td>\n      <td>0.497</td>\n      <td>0.00</td>\n      <td>1.620</td>\n      <td>0.1240</td>\n      <td>1.180</td>\n      <td>1.11</td>\n      <td>1.290</td>\n      <td>0.160</td>\n      <td>-0.916</td>\n      <td>2.55</td>\n      <td>0.945</td>\n      <td>0.796</td>\n      <td>-1.520</td>\n      <td>0.00</td>\n      <td>1.200</td>\n      <td>1.100</td>\n      <td>0.987</td>\n      <td>1.350</td>\n      <td>1.460</td>\n      <td>0.995</td>\n      <td>0.954</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.768</td>\n      <td>-0.6920</td>\n      <td>-0.0402</td>\n      <td>0.615</td>\n      <td>0.144</td>\n      <td>0.749</td>\n      <td>0.397</td>\n      <td>-0.874</td>\n      <td>0.00</td>\n      <td>1.150</td>\n      <td>0.1270</td>\n      <td>1.320</td>\n      <td>2.21</td>\n      <td>0.730</td>\n      <td>-0.758</td>\n      <td>-1.120</td>\n      <td>0.00</td>\n      <td>0.848</td>\n      <td>0.107</td>\n      <td>0.502</td>\n      <td>1.55</td>\n      <td>0.922</td>\n      <td>0.864</td>\n      <td>0.983</td>\n      <td>1.370</td>\n      <td>0.601</td>\n      <td>0.919</td>\n      <td>0.957</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
    "source": [
@@ -1331,7 +1058,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3-final"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
